--- a/src/styles/custom-markdown.css
+++ b/src/styles/custom-markdown.css
@@ -2,7 +2,6 @@
 .profile {
   display: flex;
   justify-content: space-between;
-
 }
 
 .job-info, .basic-item {
@@ -30,9 +29,9 @@
 
 /* basic_info */
 .basic-info  {
-  font-size: 13px;
+  font-size: 14px;
   padding: 4px 0 0px;
-  width: 60%;
+  width: 70%;
   display: flex;
   flex-wrap: wrap;
   align-items: flex-start;
@@ -83,28 +82,40 @@
 .basic-info i {
   display: inline-block;
   padding: 0;
+  color: var(--theme-icon-color);
 }
 
 
 /* resume-section */
 .resume-section {
-  border-bottom: 1px solid #d1d1d1;
+  border-bottom: 1px solid var(--theme-line-color);
   padding: 10px 0;
   margin: 10px 0;
 }
 
 .resume-section .sec-title {
   font-weight: bold;
-  font-size: 18px;
+  font-size: 20px;
+  color: var(--theme-color);
 }
 
 .resume-item {
   display: flex;
   justify-content: space-between;
+  font-weight: bold;
 }
 
 .resume-content-title {
   font-weight: bold;
   font-size: 16px;
   margin: 10px 0 5px;
+}
+.resume-item .item-right {
+  color: var(--theme-color);
+}
+
+/* ul li */
+li {
+  padding-top: 4px;
+  padding-bottom: 4px;
 }
