fix: 修复样式问题

--- a/src/styles/custom-markdown.css
+++ b/src/styles/custom-markdown.css
@@ -146,6 +146,10 @@ li {
   display: flex;
 }
 
+.layout-left .md-resume-content, .layout-right .md-resume-content {
+  margin-top: 10px;
+}
+
 .layout-left .profile, .layout-right .profile {
   width: 220px;
   display: block;
