feat: add basicinfotitle

--- a/src/styles/custom-markdown.css
+++ b/src/styles/custom-markdown.css
@@ -101,7 +101,6 @@
   color: var(--theme-icon-color);
 }
 
-
 /* resume-section */
 .resume-section {
   border-bottom: 1px solid var(--theme-line-color);
@@ -166,7 +165,7 @@ li {
  .layout-left .basic-item, .layout-right .basic-item {
   width: 100%;
   text-align: left;
-  padding-bottom: 8px;
+  padding-top: 8px;
 }
 
 /* 右侧布局 */
@@ -207,7 +206,7 @@ li {
 .layout-left .layout-bg .name,  .layout-left .layout-bg .job{
   color: #fff;
   text-align: center;
-   font-size: 22px;
+  font-size: 22px;
 }
 
 
@@ -227,9 +226,17 @@ li {
   display: block;
   width: 200px;
   box-sizing: border-box;
-  margin-top: 60px;
-  padding-left: 10px;
-  padding-right: 10px;
+  margin-top: 40px;
+  padding-left: 15px;
+  padding-right: 15px;
 }
 
 
+.basic-info .basic-info-title {
+  font-size: 20px;
+  padding-bottom: 5px;
+  font-weight: bold;
+  margin-bottom: 10px;
+  color: var(--theme-color);
+  border-bottom: 1px solid var(--theme-color);
+}
