--- a/src/styles/custom-markdown.css
+++ b/src/styles/custom-markdown.css
@@ -3,7 +3,8 @@
 .md-resume-content {
   padding-top: 10px;
   padding-left: 20px;
-  padding-right: 20px
+  padding-right: 20px;
+  padding-bottom: 30px;
 }
 /* profile */
 .profile {
@@ -62,8 +63,6 @@
   display: flex;
   align-items: center;
 }
-
-
 
 .item-wrapper {
   display: flex;
